Refacorizando y acomodando secciones | Redes

--- a/4º Año/Comunicaciones y Redes/Unidad 5/2. Redes de Area Local.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/2. Redes de Area Local.md
@@ -3,7 +3,7 @@ Los protocolos definidos específicamente para la transmisión en redes LAN y MA
 El IEEE 802 es un estándar que especifica la arquitectura de las redes LAN, funcionando como un modelo de referencia que ha sido adoptada por todas las organizaciones que trabajan en la especificación de estándares LAN. Además, la capa física del modelo 802 incluye una especificación del medio de transmisión y de la topología. Generalmente, esto se considera por debajo de la capa inferior del modelo OSI. Sin embargo, dado que la elección del medio de transmisión y la topología es crítica en el diseño de redes LAN, se incluye una especificación del medio.
 
 >[!info] Redes de Contienda
->Todas las redes de área local pueden ser consideradas ***redes de contienda***, puesto que los múltiples usuarios o dispositivos que forman parte de la misma compiten continuamente por acceso y uso de un recurso compartido, como lo puede ser el ancho de banda del médio de transmisión. Este tipo de redes pueden experimentar congestión y colisiones, lo que afecta el rendimiento y la eficiencia de la transmisión de datos.
+>Todas las redes de área local pueden ser consideradas ***redes de contienda***, puesto que los múltiples usuarios o dispositivos que forman parte de la misma compiten continuamente por el acceso y uso de un recurso compartido, como lo puede ser el ancho de banda del médio de transmisión. Este tipo de redes pueden experimentar congestión y colisiones, lo que afecta el rendimiento y la eficiencia de la transmisión de datos.
 
 Por encima de la capa física se encuentran las funciones asociadas a los servicios ofrecidos a los usuarios LAN. Entre ellas se encuentran las siguientes:
 1. La transmisión y ensamblado de datos en tramas con campos de dirección y de detección de errores.
@@ -53,6 +53,7 @@ Esta capa recibe un bloque de datos de la capa superior (LLC) y debe realizar fu
 >En la mayor parte de los protocolos englobados por esta capa, es el mismo protocolo el responsable tanto de la detección de errores como de la recuperación de estos mismos a través de la solicitud de retransmisión de la trama errónea.
 
 #### Técnicas de Control de Acceso al Medio
+Las técnicas de control de acceso al medio son fundamentales para gestionar de forma eficiente cómo los dispositivos que comparten el mismo canal de comunicación acceden al medio. A continuación describiremos algunos de las técnicas utilizadas por redes LAN.
 ##### ALOHA
 ***ALOHA*** es una técnica que permite a una estación enviar una trama siempre que esta lo necesite. Después de la transmisión, la estación escucha el medio para recibir una confirmación, lo que indicaría que la trama fue recibida correctamente. Si no se recibe confirmación, la estación retransmite la trama, y tras varios intentos fallidos, desiste.
 Una de las principales desventajas de esta técnica es la alta probabilidad de colisiones entre tramas, lo que limita la utilización máxima del canal a aproximadamente el 18%. Este problema se agrava a medida que aumenta la carga en la red. Existe una mejora denominada ALOHA ranurado que disminuye la posibilidad de colisión y aumenta el uso del canal a un 37%, aun así no es el mejor de los mecanismos de acceso existentes.
@@ -71,8 +72,8 @@ La principal desventaja de CSMA/CD es que, si bien minimiza el tiempo perdido po
 Las redes LAN de alta velocidad más ampliamente utilizadas en la actualidad son las basadas en Ethernet, desarrolladas por el comité de estándares IEEE 802.3. Como ya mencionamos anteriormente cada protocolo MAC implementa a su manera el control de acceso al medio, Ethernet concretamente utiliza la técnica conocida como ***CSMA/CD***.
 
 >[!tldr] Slot Time
->En las redes Ethernet, el ***slot time*** es la cantidad de tiempo que le toma a una trama en ser percibida por todo los nodos de la red. Este parámetro es crucial para el correcto funcionamiento del protocolo CSMA/CD, donde se debe asegurar que el retardo de la transmisión sea menor o igual que el tiempo de transmisión garantizando así la detección efectiva de las colisiones por parte de los nodos de la red.
->Este parámetro se establece generalmente en 51,2 microsegundos para garantizar que una estación de red pueda detectar una colisión antes de terminar de enviar la trama completa. Este valor además establece el tamaño mínimo de las tramas que se pueden transmitir, garantizando la correcta propagación de la señal en la red, minimizando así la posibilidad de colisiones.
+>En las redes Ethernet, el ***slot time*** es la cantidad de tiempo que le toma a una trama en ser percibida por todo los nodos de la red. Este parámetro es crucial para el correcto funcionamiento del protocolo CSMA/CD, donde se debe asegurar que el retardo de la transmisión sea menor o igual que el tiempo de transmisión garantizando así la detección efectiva de las colisiones por parte del nodo emisor.
+>Este parámetro se establece generalmente en 51,2 microsegundos para garantizar que una estación de red pueda detectar una colisión antes de terminar de enviar la trama completamente. Este valor además establece el tamaño mínimo de las tramas que se pueden transmitir, garantizando la correcta propagación de la señal en la red, minimizando así la posibilidad de colisiones.
 >El tamaño mínimo de las tramas puede variar de acuerdo a la capacidad del enlace, puesto que a mayor capacidad, mayor será el tamaño mínimo de la trama para respetar el slot time.
 
 El formato normal de una trama Ethernet está compuesta por los siguientes campos:
@@ -80,7 +81,7 @@ El formato normal de una trama Ethernet está compuesta por los siguientes campo
 - **Delimitador del comienzo de la trama (SFD)**: Consiste en la secuencia de bits 10101011, que indica el comienzo real de la trama y posibilita que el receptor pueda localizar el primer bit del resto de la trama.
 - **Dirección de destino (DA)**: Especifica la estación o estaciones a las que va dirigida la trama. Puede tratarse de una única dirección física, una dirección de grupo o una dirección global.
 - **Dirección de origen (SA)**: Especifica la estación que envió la trama.
-- **Longitud/Tipo**: Contiene la longitud del campo de datos LLC expresado en bytes, o el campo tipo de Ethernet. Este campo va a depender de acuerdo a si la trama se implemente siguiendo la norma IEEE 802.3 o una especificación primitiva de Ethernet. En cualquier caso, el tamaño máximo de la trama, excluyendo el preámbulo y el SFD, es de 1518 bytes.
+- **Longitud/Tipo**: Contiene la longitud del campo de datos LLC expresado en bytes, o el campo tipo de Ethernet. Este campo va variar dependiendo de si la trama se implemente siguiendo la norma IEEE 802.3 o una especificación primitiva de Ethernet. En cualquier caso, el tamaño máximo de la trama, excluyendo el preámbulo y el SFD, es de 1518 bytes.
 - **Datos LLC**: Unidad de datos proporcionada por el LLC.
 - **Relleno**: Consiste en octetos añadidos para asegurar que la trama sea lo suficientemente larga como para que la técnica de detección de colisiones funcione correctamente.
 - **Secuencia de Comprobación de Trama (FCS)**: Está constituido por una comprobación de redundancia cíclica de 32 bits, calculada teniendo en cuenta todos los campos excepto el preámbulo, el SFD y el FCS.
@@ -96,6 +97,7 @@ En la especificación IEEE 802 no solo abarca a los distintos protocolos y méto
 
 Además de estas alternativas, existen varias versiones que funcionan a 100 Mbps, 1 Gbps y 10 Gbps. Todas las opciones 100BASE-T usan el protocolo MAC y el formato de la trama Ethernet. Mientras que 100BASE-X identifica al conjunto de opciones que usan las especificaciones del medio físico definidas originalmente para ***FDDI (Fiber Distributed Data Interface)***. 
 Todos los esquemas 100BASE-X emplean dos enlaces físicos entre los nodos, uno para transmisión y otro para recepción, este tipo de redes pueden hacer uso de *pares trenzados apantallados (STP)* o *pares trenzados no apantallados (UTP)* de alta calidad (categoría 5), mientras que 100BASE-FX hace uso de fibra óptica. Por otro lado, 100BASE-T4 define una alternativa menos costosa que puede utilizar UTP de voz de categoría 3 además de UTP de categoría 5 de alta calidad. Para alcanzar los 100 Mbps en cables de baja calidad, 100BASE-T4 especifica el uso de 4 líneas de par trenzado entre los nodos, de los cuales tres se usan simultáneamente para la transmisión de datos en una dirección.
+
 ![[especificacion-fisica-ethernet.png]]
 
 El mismo estándar define varias especificaciones para Gigabit Ethernet, cada una con características específicas en cuanto al tipo de cable, la distancia máxima que pueden cubrir y el medio de transmisión utilizado.
@@ -110,3 +112,34 @@ Las redes ***Token Ring*** funcionan mediante un mecanismo en el cual un pequeñ
 El funcionamiento básico de una red Token Ring se basa en el uso del token para el control de acceso al medio. Solo la estación que captura el token puede transmitir datos. Cuando una estación quiere transmitir, debe esperar a que le llegue el token. Al recibir el token, la estación lo toma y lo convierte en el comienzo de su trama de datos. Luego, la estación transmite sus datos alrededor del anillo, y estos circulan por el anillo hasta llegar al dispositivo destinatario. El dispositivo destinatario copia los datos y, dependiendo del protocolo, marca el paquete como recibido. El token se libera nuevamente en el anillo una vez que la estación emisora ha terminado de transmitir, permitiendo que otra estación pueda usarlo para enviar sus datos. Este mecanismo asegura un acceso equitativo al medio, evitando colisiones al garantizar que solo una estación transmita a la vez.
 Los repetidores en un anillo Token Ring tienen dos estados principales: el estado de escucha y el estado de transmisión. En el estado de escucha, el repetidor retransmite los datos que recibe, mientras que en el estado de transmisión, retransmite los datos de la estación a la que está conectado. Existe también un tercer estado, conocido como cortocircuito (bypass), que permite que las señales propagadas atraviesen el repetidor sin retraso, mejorando las prestaciones y proporcionando una solución parcial al problema de fiabilidad.
 El sistema requiere mecanismos de mantenimiento, como la supervisión de la existencia del token para asegurar que siempre haya uno en circulación y que no haya duplicados, lo cual es crítico para el funcionamiento correcto de la red.
+## Redes de Área Local Virtuales (VLAN)
+En la actualidad muchas redes LAN institucionales modernas suelen estar configuradas de forma jerárquica, teniendo cada departamento o grupo de trabajo su propia red LAN conmutada conectada a su vez a otra red conmutada de nivel superior que les brinda acceso al resto de terminales de la red local. Aunque una configuración de este tipo funciona bien en un mundo ideal, este tipo de redes presentan una serie de desventajas:
+- **Falta de aislamiento del tráfico**. Aunque la jerarquía localiza el tráfico del grupo dentro de un mismo conmutador, el tráfico de difusión tienen que atravesar toda la red institucional. Limitar el ámbito del tráfico de difusión mejoraría el rendimiento de la LAN. Sería también deseable limitar el tráfico de difusión de la LAN por razones de seguridad y confidencialidad.
+- **Uso ineficiente de los conmutadores**. Si una institución tiene 10 grupos, entonces se necesitarían 10 conmutadores de primer nivel. Si cada uno de los grupos es pequeño, entonces un único conmutador con los puertos suficientes para acomodar a todo el mundo, pero este único conmutador no proporcionaría la funcionalidad de aislamiento del tráfico.
+- **Gestión de los usuarios**. Si un empleado se mueve entre grupos, el cableado físico debe modificarse para conectar al empleado a un conmutador diferente, esto se torna más complejo si los empleados pertenecen dos o más grupos.
+
+Cada una de estas desventajas puede ser abordada mediante el uso de conmutadores compatibles con _**redes de área local virtuales (VLAN)**_. Estos conmutadores permiten definir múltiples VLAN sobre una única infraestructura física de red de área local.
+En una VLAN basada en puertos, el administrador de la red divide las interfaces del conmutador en grupos. Cada grupo constituye una VLAN, donde los puertos de cada VLAN forman un dominio de difusión. Con esta configuración, solo los dispositivos pertenecientes al mismo grupo recibirán los mensajes de difusión, aislando así el tráfico interno de la organización.
+Debido a este aislamiento, es imposible intercambiar tráfico entre los distintos grupos de la red. Este inconveniente se resuelve conectando una de las interfaces de cada grupo a un router, que se encargará de redirigir el tráfico entre VLAN. Afortunadamente, muchos conmutadores modernos ya incluyen un router integrado que gestiona el redireccionamiento entre VLAN.
+Un aspecto interesante de las VLAN es que permiten que dispositivos ubicados en diferentes edificios pertenezcan a la misma red virtual. Esto se logra interconectando los distintos conmutadores VLAN mediante la técnica conocida como _**troncalización VLAN (VLAN Trunking)**_. Esta técnica configura una interfaz como troncal, la cual conecta ambos conmutadores VLAN. El puerto troncal pertenece a todas las VLAN, y las tramas enviadas a cualquier VLAN son reenviadas a través del enlace troncal hacia el otro conmutador.
+Un desafío que surge en este escenario es identificar a qué VLAN pertenece una trama cuando se envía a través del enlace troncal. Para solucionar esto, el estándar IEEE define un formato de trama Ethernet extendido, que incluye la trama Ethernet estándar más una _**etiqueta VLAN**_ de 4 bytes añadida a la cabecera de la trama.
+
+![[trama-con-tpid.png]]
+
+Esta etiqueta identifica la VLAN a la que está destinada la trama. Al enviar una trama a través del enlace troncal, el conmutador emisor agrega la etiqueta VLAN a la trama, y al llegar a destino, la etiqueta es analizada y eliminada por el conmutador receptor.
+
+>[!tldr] Tag Protocol Identifier (TPID)
+>La etiqueta VLAN se compone de los siguientes campos:
+>
+>- **Identificador de Protocolo de Etiquetado (TPID)**: Campo de 2 bytes, con un valor hexadecimal fijo de 81-00.
+>- **Control de Etiquetado (Tag Control Information)**: Campo de 2 bytes, el cual incluye un campo identificador de VLAN de 12 bits y un campo de prioridad de 3 bits, cuya función es similar a la del campo TOS en los paquetes IP.
+
+Las VLAN ofrecen ciertas ventajas, como la reducción de costos asociados a traslados, adiciones y cambios en la red, un mejor control de multidifusión (broadcast) y una mayor seguridad tanto a nivel de grupo de trabajo como de red. Sin embargo, también presentan ciertas desventajas, como la necesidad de una configuración cuidadosa por software y el hecho de que cada switch o router debe invertir recursos de procesamiento para revisar el etiquetado de cada trama VLAN.
+### Maneras de Configurar una VLAN
+Al momento de instalar una VLAN la misma se puede configurar de forma estática o dinámica. En las VLAN estáticas, las estaciones de trabajo conectadas a un puerto en particular pertenecerán siempre a la misma VLAN, a menos que se cambie manualmente la configuración, aunque existen varias formas de asignar estaciones de trabajo a una VLAN:
+- **Por puertos o interfaz**: Cada puerto del switch se asigna manualmente a una VLAN. Este es el método más común y que hemos mencionado anteriormente.
+- **Por dirección física**: Se asignan las estaciones a las VLAN basándose en las direcciones MAC de los dispositivos conectados. El switch mantiene una tabla, se especifica qué dirección MAC corresponde a cada VLAN.
+- **Por protocolo**: Se asignan las VLAN en función del protocolo que utiliza cada estación. El switch asigna a la VLAN correspondiente según el protocolo que reconoce.
+- **Por dirección IP**: Se utiliza una tabla que asigna direcciones IP a VLAN específicas, de modo que los dispositivos que utilicen ciertas direcciones IP se integren a la VLAN correspondiente. Este método es el menos recomendado, ya que las direcciones IP de los equipos puede ser cambiada fácilmente.
+
+Por otro lado, en las VLAN dinámicas, el switch determina automáticamente a qué VLAN pertenece cada estación de trabajo basándose en su **dirección física (MAC)**, **dirección lógica (IP)** o **protocolo**. Esto significa que las estaciones pueden moverse dentro de la red, y el switch reasigna automáticamente la VLAN correcta según la configuración predefinida, brindando una mayor flexibilidad, ya que no requieren reconfiguraciones manuales cuando se cambian las estaciones de puerto o ubicación.
