--- a/4º Año/Comunicaciones y Redes/Unidad 5/1. Capa de Enlace de Datos.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/1. Capa de Enlace de Datos.md
@@ -4,7 +4,7 @@ La capa de enlace de datos utiliza los servicios de la capa física para enviar 
 2. Manejar los errores de transmisión.
 3. Regular el flujo de datos para que los emisores rápidos no saturen a los receptores lentos.
 
-Para cumplir con estas metas, la capa de enlace de datos toma los paquetes que obtiene de la capa de red y los encapsula en ***tramas*** para transmitirlos. Cada trama contiene un encabezado, un campo de carga útil y un terminador o cola.
+Para cumplir con estas metas, la capa de enlace de datos toma los paquetes que obtiene de la capa de red y los encapsula en ***tramas***. Cada trama contiene un encabezado, un campo de carga útil y un terminador o cola.
 Los distintos protocolos que forman parte de la capa de enlace definen su propio formato de tramas, las cuales son intercambiadas entre los distintos nodos situados en los extremos del enlace. Cada protocolo define también las acciones que se deben llevar a cabo al momento del envío y recepción de tramas.
 El servicio básico de cualquier capa de enlace es mover una trama desde un nodo hasta otro adyacente a través de un único enlace de comunicaciones, aunque los detalles acerca de los servicios proporcionados pueden variar de un protocolo a otro. Muchos de los servicios brindados por la capa de enlace presentan notables paralelismos con los servicios de la capa de transporte, no obstante no son lo mismo, ya que están construidos para fines diferentes.
 
@@ -14,7 +14,7 @@ El servicio básico de cualquier capa de enlace es mover una trama desde un nodo
 >![[implementacion-enlace.png]]
 
 ## Delimitación de Tramas
-Para proveer servicio a la capa de red, la capa de enlace de datos debe utilizar los servicios proporcionados por la capa física, la cual se encarga de aceptar un flujo de bits puros y tratar de entregarlo al destino. Dividir este flujo de bits en tramas no es una tarea sencilla. Un buen diseño de tramas debe facilitar al receptor la identificación del inicio de las nuevas tramas, utilizando la menor cantidad posible del ancho de banda del canal. Para esta tarea existen cuatro métodos posibles:
+Para proveer servicio a la capa de red, la capa de enlace de datos debe utilizar los servicios proporcionados por la capa física, la cual se encarga de enviar y aceptar un flujo de bits puro. Dividir este flujo de bits en tramas no es una tarea sencilla. Un buen diseño de tramas debe facilitar al receptor la identificación del inicio de las nuevas tramas, utilizando la menor cantidad posible del ancho de banda del canal. Para esta tarea existen cuatro métodos posibles:
 
 1. **Conteo de bytes**: Utiliza un campo en la cabecera de la trama para indicar el largo en bytes de cada trama. Cuando la capa de enlace de datos del nodo destino ve el conteo de bytes, sabe dónde finaliza cada trama. Este método tiene el percance de que este contador puede ser alterado por algún error de transmisión.
 2. **Bytes bandera con relleno de bytes**: Se utiliza un byte bandera para indicar el inicio y final de cada trama, con este método dos bytes bandera consecutivos señalan el final de una trama y el inicio de la siguiente. Con el inconveniente de que este byte bandera puede aparecer dentro del contenido de la trama haciendo que se desincronizen todo el envío de datos, una forma de resolver eso es utilizar un byte de escape antes del byte bandera, con la desventaja de que esto produce *overhead* en la trama.
@@ -22,35 +22,35 @@ Para proveer servicio a la capa de red, la capa de enlace de datos debe utilizar
 4. **Violaciones de codificación de la capa física**: Utiliza un rango de señales determinado a nivel de hardware para indicar el comienzo y final de la trama. Este método resulta muy práctico, dado que existen ciertas señales reservadas que se pueden encontrar el inicio y final de la trama de forma sencilla sin necesidad de rellenar los datos.
 
 Muchos protocolos de capa de enlace usan una combinación de estos métodos por seguridad. Por ejemplo un patrón común utilizado por Ethernet y las redes IEEE 802.11 es hacer que una trama inicie con un patrón bien definido, conocido como ***preámbulo***, dicho patrón podría ser bastante largo de modo que el receptor se pueda preparar para un paquete entrante. El preámbulo va seguido de un campo de longitud en el encabezado, que se utiliza para localizar el final de la trama.
-## Servicios de Transmisión
+## Servicios Brindados por la Capa de Enlace de Datos
+Los servicios proporcionados por la capa de enlacec de datos son esenciales para asegurar la transferencia fiable y eficiente de datos entre nodos en una red local. Esta capa se encarga de la detección y corrección de errores, el control de flujo, y de la gestión de acceso al medio compartido, aunque de este tema hablaremos más adelante cuando veamos el estándar IEEE 802.
+### Servicios de Transmisión
 La capa de enlace de datos puede diseñarse para ofrecer varios servicios. Los servicios reales ofrecidos varían de un protocolo a otro, pero existen tres posibilidades razonables que normalmente se proporcionan las cuales son:
 
 1. **Servicio sin conexión ni confirmación de recepción**: El emisor envía tramas independientes al receptor sin que esta confirme la recepción, por lo que no se establece una conexión lógica de antemano. Si se pierde una trama debido al ruido en la línea, la capa de enlace de datos no realiza ningún intento por detectar la pérdida o recuperarse de ella. Esta clase de servicio es apropiada cuando la tasa de error del canal es muy baja, de modo que la recuperación se deja a las capas superiores.
 2. **Servicio sin conexión con confirmación de recepción**: El emisor envía tramas sin establecer una conexión lógica entre los nodos, pero el receptor confirma de manera individual la recepción de cada trama enviada. De esta manera, el emisor sabe si la trama llegó correctamente. Si no ha llegado en un intervalo especificado, se puede reenviar la trama nuevamente. Este servicio es útil en canales no confiables, como en el caso de los sistemas inalámbricos.
 3. **Servicio orientado a conexión con confirmación de recepción**: Tanto el emisor como el receptor establecen una conexión antes de comenzar a transmitir datos. Cada trama enviada a través de la conexión está numerada, y la capa de enlace de datos garantiza que cada trama enviada llegue a su destino. Garantizando de esta forma que cada trama se recibirá exactamente una vez y que todas las tramas se recibirán en el orden correcto.
 
->[!tldr] Control de Errores
->La forma habitual de asegurar la entrega confiable de datos es proporcionando retroalimentación al emisor sobre el estado en el otro extremo de la línea. Si el emisor recibe una confirmación positiva de recepción de una trama, sabe que la trama llegó correctamente. Por el contrario, una confirmación negativa de recepción indica que algo falló y que la trama debe ser retransmitida.
+>[!tldr] Errores Durante la Transmisión de Tramas
 >Problemas relacionados con el hardware pueden causar la pérdida total o parcial de la trama de control, lo que haría que el emisor espere indefinidamente dicha trama. Para solucionar este problema, se introducen temporizadores en la capa de enlace. Estos temporizadores permiten al emisor esperar un tiempo determinado para recibir la confirmación de recepción. Si no se recibe la confirmación dentro del tiempo establecido, el emisor vuelve a enviar la misma trama.
 
 ### Control de Flujo
-Otro aspecto importante en el diseño de la capa de enlace de datos es qué hacer con un emisor que quiere transmitir tramas de manera sistemática y a mayor velocidad que aquella con que puede aceptarlos el receptor. Para hacer frente a esta problemática existen dos métodos distintos:
+Otro aspecto importante en el diseño de la capa de enlace de datos es qué hacer cuando un emisor que quiere transmitir tramas de manera sistemática y a mayor velocidad que aquella con que puede aceptarlos el receptor. Para hacer frente a esta problemática existen dos métodos distintos:
 
 - **Control de flujo basado en retroalimentación**: El receptor envía de regreso información al emisor para autorizarle que envíe más datos o por lo menos indicarle su estado.
 - **Control de flujo basado en tasa**: El protocolo de la capa de enlace posee un mecanismo integrado que limita la tasa a la que el emisor puede transmitir los datos, sin recurrir a la retroalimentación por parte del receptor.
 
-El protocolo de ventana deslizante es un mecanismo de control el flujo que permite al emisor enviar múltiples tramas antes de necesitar una confirmación (ACK), aumentando así la eficiencia y la utilización del canal al máximo. 
+El protocolo de ventana deslizante es un mecanismo de control el flujo que permite al emisor enviar múltiples tramas antes de necesitar una confirmación (ACK), aumentando así la eficiencia y la utilización del canal. 
 En este protocolo tanto el emisor como el receptor tienen una “ventana” que indica el número de tramas que se pueden transmitir sin confirmar. El emisor envía un número $w$ de tramas, cada una con un número de secuencia. El receptor recibe las tramas y envía ACKs para las tramas correctas. Al recibir un ACK, la ventana del emisor se desplaza, permitiendo enviar nuevas tramas.
-Para mejorar la eficiencia, en lugar de enviar una trama de control independiente tras recibir una de datos, el receptor espera a que la capa de red le pase el siguiente paquete de datos, y anexa la confirmación de recepción a esta trama mediante un campo del encabezado. Así, la confirmación viaja con la siguiente trama de datos, optimizando el uso del enlace y reduciendo las tramas de control enviadas. Esta técnica se conoce como ***superposición (piggybacking)***. Por supuesto, si uno de los nodos tiene que enviar una confirmación, pero no tiene datos para enviar, se enviará una trama de confirmación.
+Para mejorar la eficiencia, en lugar de enviar una trama de control independiente tras recibir una de datos, el receptor espera a que la capa de red pase el siguiente paquete de datos, y anexa la confirmación de recepción a esta trama mediante un campo del encabezado. Así, la confirmación viaja con la siguiente trama de datos, optimizando el uso del enlace y reduciendo las tramas de control enviadas. Esta técnica se conoce como ***superposición (piggybacking)***. Por supuesto, si uno de los nodos tiene que enviar una confirmación, pero no tiene datos para enviar, se enviará una trama de confirmación.
 
 >[!tldr] Envió de Tramas de Confirmación
->A la hora de enviar ACK al emisor, el receptor no necesita enviar una confirmación para todas las tramas, solo basta con enviar cuál es el número de secuencia de la trama que está esperando (Receive Ready).
+>A la hora de enviar ACK al emisor, el receptor no necesita enviar una confirmación individual para todas las tramas, solo basta con enviar cuál es el número de secuencia de la trama que está esperando (Receive Ready).
 >La mayoría de los protocolos también permiten que cualquiera de los participantes pueda interrumpir totalmente la transmisión de tramas desde el otro extremo a través de un mensaje especial (Receive Not Ready).
 
 ### Control de Errores
 
-El control de errores hace referencia a los mecanismos necesarios para la detección y la corrección de errores que aparecen en una transmisión de tramas. Las técnicas más usuales para el control de errores se basan en algunas o todas las siguientes aproximaciones:
-
+El control de errores hace referencia a los mecanismos necesarios para la detección y la corrección de errores que aparecen en una transmisión de tramas. Las técnicas más usuales para el control de errores se basan en algunas de las siguientes aproximaciones:
 - **Detección de errores**: Consiste en un conjunto de métodos que permiten al emisor detectar si los datos de las tramas están corruptos o no.
 - **Confirmaciones positivas**: El destino devuelve una confirmación positiva por cada trama recibida con éxito, libre de errores.
 - **Retransmisión tras la expiración de un temporizador**: El emisor retransmite las tramas que no se han confirmado tras un periodo de tiempo predeterminado.
@@ -72,12 +72,8 @@ Las técnicas de detección de errores permiten al receptor detectar los errores
 Utiliza un **bit de paridad** para detectar errores en el flujo de bits de las tramas. Este bit de paridad no es más que un bit adicional que el emisor pone al final de la carga útil de la trama. Dependiendo del tipo de paridad elegida la cantidad de unos de la carga útil más este bit será par o impar.
 Un problema con este esquema es que un solo bit de paridad puede detectar de manera confiable un único error de un solo bit en el bloque. Si el bloque está muy confuso debido a una ráfaga de errores larga, la probabilidad de detectar ese error es solo del 50%, lo cual no es aceptable.
 Es posible aumentar la probabilidad de detección de manera considerable si cada bloque a enviar se trata como una matriz rectangular de $n \times k$ bits. Ahora, si calculamos y enviamos un bit de paridad para cada fila, se detectarán de manera confiable errores de hasta $k$ bits siempre y cuando haya a lo mucho un error por fila. Esta técnica se puede mejorar aún más si se calculan los bits de paridad sobre los datos en un orden distinto al que se transmiten los bits de datos. A este proceso se le denomina intercalado.
-
->[!tldr] Corrección de Errores hacia Adelante
->La capacidad del receptor para detectar y corregir errores a la vez se conoce con ***corrección de errores hacia adelante (FEC)***. Estas técnicas se suelen utilizar comúnmente en los dispositivos de almacenamiento y reproducción de audio, como por ejemplo los CD de audio. En un entorno de red, las técnicas FEC también pueden emplearse por sí mismas o en conjunción con técnicas ARQ.
-
 ##### Suma de Comprobación
-En las técnicas de suma de comprobación, los $d$ bits de datos se tratan como una secuencia de enteros de $k$ bits. El método más simple consiste en sumar estos enteros de $k$ bits y utilizar la suma resultante como bits de detección de errores. Un ejemplo de este método es la ***suma de comprobación de Internet***, el cual es utilizado por protocolos como TCP y UDP, con la diferencia que para calcular esta suma se utilizan otros cálculos adicionales. Este tipo de códigos se puede realizar solo sobre la carga útil, sobre la carga útil y el encabezado o solo sobre el encabezado. Protocolos como XTP calculan dos sumas de comprobación, una para la cabecera y otro para la carga útil.
+En las técnicas de suma de comprobación, los $d$ bits de datos se tratan como una secuencia de enteros de $k$ bits. El método más simple consiste en sumar estos enteros de $k$ bits y utilizar la suma resultante como bits de detección de errores. Un ejemplo de este método es la ***suma de comprobación de Internet***, el cual es utilizado por protocolos como TCP y UDP, con la diferencia que para calcular esta suma se utilizan otros cálculos adicionales. Este tipo de códigos se puede realizar solo sobre la carga útil, sobre la carga útil y el encabezado o solo sobre el encabezado.
 Este tipo de métodos son eficientes y simples, pero ofrece una protección débil en algunos casos, precisamente debido a que es una suma simple. Existe una mejora a este método el cual es la ***suma de comprobación de Fletcher*** que incluye un componente posicional, en donde se suma el producto de los datos y su posición con la suma acumulada. Este método ofrece una detección más poderosa de los cambios en la posición de los datos.
 ##### Comprobación de Redundancia Cíclica
 Una técnica detección de errores utilizada ampliamente en las redes actuales está basada en los ***códigos de comprobación de redundancia cíclica (CRC)***.
@@ -92,10 +88,14 @@ Todas las técnicas de corrección de errores agregan cierta redundancia en las 
 4. **Códigos de verificación de paridad de baja densidad (LDPC)**.
 
 Cada uno de estos métodos tiene sus fortalezas y debilidades, y su elección depende de las necesidades específicas del sistema de comunicación y del tipo de errores esperados. Cabe aclarar que la retransmisión de tramas por parte del emisor sigue siendo un método factible en la mayoría de los casos.
+
+>[!tldr] Corrección de Errores hacia Adelante
+>La capacidad del receptor para detectar y corregir errores a la vez se conoce con ***corrección de errores hacia adelante (FEC)***. Estas técnicas se suelen utilizar comúnmente en los dispositivos de almacenamiento y reproducción de audio, como por ejemplo los CD de audio. En un entorno de red, las técnicas FEC también pueden emplearse por sí mismas o en conjunción con técnicas ARQ.
+
 ## Protocolos de la Capa de Enlace
 Como veremos más adelante los distintos tipos de redes tienen sus propios protocolos y formatos de trama, nos centraremos en estos momentos en explicar de la forma más resumida posible dos protocolos muy importantes. HDLC que es utilizado en muchos casos como punto de referencia para el desarrollo del resto de protocolos LAN. El segundo de estos protocolos es ARP encargado de realizar la correspondencia entre direcciones IP y direcciones físicas.
 ### High-Level Data Link Control (HDLC)
-Uno de los protocolos más relevantes de la capa de enlace de datos es HDLC. No solo porque fue ampliamente utilizado, sino también porque estableció las bases para el resto de protocolos, en los que se usan los mismos o similares formatos y los mismos procedimientos que los empleados en HDLC.
+Uno de los protocolos más relevantes de la capa de enlace de datos es HDLC. No solo porque fue ampliamente utilizado, sino también porque estableció las bases para el resto de protocolos, en los que se usan los mismos formatos o similares, y los mismos procedimientos que los empleados en HDLC.
 Para satisfacer las demandas de diversas aplicaciones, HDLC define tres tipos de estaciones, dos configuraciones del enlace y tres modos de operación para la transferencia de los datos.
 
 - **Tipos de estaciones**:
@@ -136,7 +136,7 @@ El funcionamiento de HDLC implica tres fases. En la fase de inicio cualquiera de
 3. Indica si se van a utilizar números de secuencia de 3 o de 7 bits.
 
 Si el otro extremo acepta la solicitud, la entidad HDLC transmitirá una trama de confirmación no numerada al extremo iniciante. Si la solicitud se rechaza, se envía una trama de ***modo desconectado***.
-Una vez aceptada la solicitud de transmisión, se establece una conexión lógica entre ambos extremos donde pasa a la fase de transmisión de datos, en esta etapa ambas partes pueden empezar a enviar datos a través de Tramas-I, las cuales son enumeradas desde 0 a $n$ dependiendo de la cantidad de bits utilizados para el número de secuencia. En cada una de estas tramas cuenta con un campo $N(S)$ que contiene el número de secuencia de esa trama y un campo $N(R)$ que se utiliza para llevar a cabo la confirmación de las tramas-I recibidas; indicando al otro extremo el número de trama-I que espera recibir.
+Una vez aceptada la solicitud de transmisión, se establece una conexión lógica entre ambos extremos dando paso a la fase de transmisión de datos, en esta etapa ambas partes pueden empezar a enviar datos a través de Tramas-I, las cuales son enumeradas desde 0 a $n$ dependiendo de la cantidad de bits utilizados para el número de secuencia. Cada una de estas tramas cuenta con un campo $N(S)$ que contiene el número de secuencia de esa trama y un campo $N(R)$ que se utiliza para llevar a cabo la confirmación de las tramas-I recibidas; indicando al otro extremo el número de trama-I que espera recibir.
 
 >[!info] Control de Flujo y Error mediante Tramas-S
 > Las tramas-S también se usan para controlar el flujo y los errores. Este tipo de tramas pueden categorizarse de acuerdo al mensaje que transmiten al emisor:
@@ -148,6 +148,6 @@ Una vez aceptada la solicitud de transmisión, se establece una conexión lógic
 
 La desconexión puede ser llevada acabo por cualquiera de las entidades, tanto por iniciativa propia o tras la petición realizada por capas superiores. HDLC lleva a cabo la desconexión mediante el envío de una ***trama DISC***. La entidad remota puede aceptar dicha desconexión mediante la devolución de una ***trama UA***, informando a la capa de red sobre la finalización de la conexión. Cualquier trama-I pendiente de confirmación puede perderse, en cuyo caso será responsabilidad de las capas superiores su recuperación.
 ### Address Resolution Protocol (ARP)
-Dado que existen tanto direcciones IP como direcciones físicas, surge la necesidad de una traducción entre ellas. El protocolo de resolución de direcciones es el encargado de realizar estas traducciones. A grandes rasgos todos los adaptadores de red tendrán un módulo ARP que recibirá una dirección IP y devolverá la dirección MAC correspondiente a ese equipo.
+Dado que existen tanto direcciones IP como direcciones físicas, surge la necesidad de realizar una traducción o correspondencia entre ellas. El protocolo de resolución de direcciones es el encargado de realizar estas traducciones. A grandes rasgos todos los adaptadores de red tendrán un módulo ARP que recibirá una dirección IP y devolverá la dirección MAC correspondiente a ese equipo.
 La forma en la que funciona realmente ARP es muy similar a DNS, con la diferencia de que ARP resuelve las correspondencias entre direcciones IP y MAC de nodos pertenecientes a una misma subred. Cada nodo en la subred tiene en su memoria una ***tabla ARP***, que contiene las correspondencias entre direcciones IP y MAC, al igual que el tiempo de vida de este registro en la tabla. No todos los nodos de la subred cuentan con una entrada para corresponder a cada dispositivo de la subred, puede que solo contenga algunas correspondencias o directamente ni una.
-En caso de no se pueda resolver la correspondencia a través de la tabla ARP, el emisor construye un paquete especial denominado ***paquete ARP***, estos paquetes contiene varios campos, en los cuales se incluyen las direcciones MAC del emisor y la IP del receptor, este paquete se pasa al adaptador de red indicándole que el paquete será enviado a través de un broadcast MAC. El adaptador de red encapsula el paquete en una trama y lo envía los demás nodos de la subred. Los demás nodos reciben la trama, la desempaquetan y pasa el paquete al módulo ARP donde se verifica si la dirección IP de destino se corresponde con la de ese host, en caso de que esto sea así el nodo enviará una respuesta ARP con la información correspondiente de este modo, el emisor recibirá este mensaje actualizará su tabla ARP y podrá comenzar a enviar las tramas. En caso de la correspondencia no se pueda llevar a cabo, el paquete es descartado.
+En caso de no se pueda resolver la correspondencia a través de la tabla ARP, el emisor construye un paquete especial denominado ***paquete ARP***, estos paquetes contiene varios campos, en los cuales se incluyen las direcciones MAC del emisor y la IP del receptor, este paquete se pasa al adaptador de red indicándole que el paquete será enviado a través de un broadcast MAC. El adaptador de red encapsula el paquete en una trama y lo envía a los demás nodos de la subred. Los demás nodos reciben la trama, la desempaquetan y pasa el paquete al módulo ARP donde se verifica si la dirección IP de destino se corresponde con la de ese host, en caso de que esto sea así el nodo enviará una respuesta ARP con la información correspondiente de este modo, el emisor recibirá este mensaje actualizará su tabla ARP y podrá comenzar a enviar las tramas. En caso de la correspondencia no se pueda llevar a cabo, el paquete es descartado.
