Aclaraciones y correcciones menores | Redes

--- a/4º Año/Comunicaciones y Redes/Unidad 5/4. Capa Fisica.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/4. Capa Fisica.md
@@ -17,18 +17,18 @@ En este contexto una ***señal analógica*** es aquella en la que la intensidad 
 >[!tldr] Señales Periódicas
 >Las ***señales periódicas*** son el tipo de señales más sencillas que se caracterizan por contener un patrón que se repite a lo largo del tiempo. La onda seno es una de las señales periódicas por antonomasia. Una onda seno genérica se representa mediante tres parámetros:
 >
->1. La **amplitud de pico** o simplemente amplitud, es el valor máximo de la señal en el tiempo y normalmente es un valor medido en voltios.
->2. La **frecuencia** es la razón a la que la señal se repite y suele medirse en ciclos por segundo o Hercios.
->3. La **fase** mide la posición relativa de la señal dentro de un periodo de la misma.
+>1. La **amplitud de pico** o simplemente amplitud, es el valor máximo que alcanza una señal respecto a su posición de equilibrio o cero a lo largo del tiempo. Normalmente, es un valor medido en voltios.
+>2. La **frecuencia** es la cantidad de ciclos que una señal completa en un segundo. Se mide en ciclos por segundo o Hertz (Hz). Por ejemplo, si una señal tiene una frecuencia de 5 Hz, significa que realiza 5 ciclos completos por segundo.
+>3. La **fase** es la posición de un punto en el ciclo de una señal en un momento específico, generalmente medida en grados o radianes. La fase indica si una señal está adelantada o atrasada respecto a otra señal de referencia.
 >
 >La ***longitud de onda***, denotada como $\lambda$, se define como la distancia que ocupa un ciclo o en otras palabras, la distancia entre dos puntos de igual fase en dos ciclos consecutivos.
 
 En la práctica, las señales electromagnéticas pueden estar compuestas por múltiples frecuencias. Utilizando el análisis de Fourier, se demuestra que cualquier señal puede descomponerse en componentes sinusoidales de diferentes frecuencias. Al combinar un número adecuado de señales sinusoidales, cada una con su propia amplitud, frecuencia y fase, es posible reconstruir cualquier señal electromagnética.
 Se define el ***espectro*** de una señal como el conjunto de frecuencias que la constituyen. Se denomina ***ancho de banda absoluto*** de una señal a la anchura del espectro. Muchas señales tienen un ancho de banda infinito, pero la mayor parte de la energía de la señal se concentra en una banda de frecuencias relativamente estrecha, esta banda se denomina ***ancho de banda efectivo*** o, simplemente, ancho de banda.
 ### Velocidad de Transmisión, Ancho de Banda y Capacidad de Canal
-El ***ancho de banda efectivo*** se define como la banda en la que se concentra la mayor parte de la energía de la señal. Aunque una señal puede contener frecuencias en un rango extenso, cualquier sistema de transmisión solo puede transferir una banda limitada de frecuencias, lo que limita la velocidad de transmisión máxima. Esto se debe a que, aunque las señales digitales pueden tener un ancho de banda infinito, en la práctica, el ancho de banda está restringido por las limitaciones del sistema de transmisión, lo que introduce distorsiones y posibles errores en la recepción.
+El ***ancho de banda efectivo*** se define como la banda de frecuencias en la que se concentra la mayor parte de la energía de la señal. Aunque una señal puede contener frecuencias en un rango extenso, cualquier sistema de transmisión solo puede transferir una banda limitada de frecuencias, lo que limita la velocidad de transmisión máxima. Esto se debe a que, aunque las señales digitales pueden tener un ancho de banda infinito, en la práctica, el ancho de banda está restringido por las limitaciones del sistema de transmisión, lo que introduce distorsiones y posibles errores en la recepción.
 Existe una relación directa entre la velocidad de transmisión y el ancho de banda, ya que cuanto mayor es el ancho de banda disponible, mayor es la velocidad a la que se pueden transmitir los datos.
-Se denomina ***capacidad de canal*** a la cantidad máxima de bits que pueden ser enviados durante un periodo de tiempo, generalmente medida en bits por segundos, a través de un canal determinado. La capacidad de un canal va a depender de la velocidad de transmisión, el ancho de banda del mismo, el ruido que posea el medio y la taza de error.
+Se denomina ***capacidad de canal*** a la cantidad máxima de bits que pueden ser enviados durante un periodo de tiempo, generalmente medida en bits por segundos, a través de un canal determinado. La capacidad de un canal va a depender de la velocidad de transmisión, el ancho de banda del mismo, el ruido que posea el medio y la tasa de error.
 
 >[!tldr] Capacidad Teórica del Canal
 >Nyquist formalizo la manera de calcular la capacidad de canal para medio de transmisión exentos de ruido. En estos casos la velocidad de transmisión de un medio con un ancho de banda $B$ satisface la siguiente ecuación:
