Protocolos orientados al bit y al caracter | Redes

--- a/4º Año/Comunicaciones y Redes/Unidad 5/1. Capa de Enlace de Datos.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/1. Capa de Enlace de Datos.md
@@ -1,7 +1,7 @@
 La capa de enlace de datos utiliza los servicios de la capa física para enviar y recibir bits a través de los canales de comunicación. Tiene varias funciones específicas, entre las que se incluyen:
 1. Proporcionar a la capa de red una interfaz de servicio bien definida.
 2. Manejar los errores de transmisión.
-3. Regular el flujo de datos para que los emisores rápidos no saturen a los receptores lentos.
+3. Regular el flujo de datos para que los emisores no saturen a los receptores.
 
 Para cumplir con estas metas, la capa de enlace de datos toma los paquetes que obtiene de la capa de red y los encapsula en ***tramas***. Cada trama contiene un encabezado, un campo de carga útil y un terminador o cola.
 Los distintos protocolos que forman parte de la capa de enlace definen su propio formato de tramas, las cuales son intercambiadas entre los distintos nodos situados en los extremos del enlace. Cada protocolo define también las acciones que se deben llevar a cabo al momento del envío y recepción de tramas.
@@ -88,6 +88,16 @@ Cada uno de estos métodos tiene sus fortalezas y debilidades, y su elección de
 
 ## Protocolos de la Capa de Enlace
 Como veremos más adelante los distintos tipos de redes tienen sus propios protocolos y formatos de trama, nos centraremos en estos momentos en explicar de la forma más resumida posible dos protocolos muy importantes. HDLC que es utilizado en muchos casos como punto de referencia para el desarrollo del resto de protocolos LAN. El segundo de estos protocolos es ARP encargado de realizar la correspondencia entre direcciones IP y direcciones físicas.
+
+>[!note] Clasificación de los Protocolos de la Capa de Enlace
+>Los protocolos de comunicación se pueden clasificar en dos categorías principales:
+>- **Protocolos Orientados al Bit**: Tratan los datos como una secuencia continua de bits, sin preocuparse por los límites de los caracteres. Utilizan técnicas como el relleno de bits para garantizar que las secuencias de control no aparezcan accidentalmente en los datos. Este tipo de protocolos posee las siguientes características:
+>	1. La implementación puede ser más compleja debido a la necesidad de gestionar el relleno de bits y otras técnicas de control de flujo.
+>	2. Requiere más procesamiento para interpretar los datos, ya que no se basa en límites de caracteres predefinidos.
+>- **Protocolos Orientados al Caracter**: Tratan los datos como una secuencia de caracteres, utilizando caracteres especiales para delimitar el inicio y el fin de los mensajes. Son más simples de implementar porque se basan en caracteres predefinidos para el control. Estos protocolos se caracterizan por:
+>	1. Son menos eficientes en el uso del ancho de banda, ya que los caracteres de control ocupan espacio adicional.
+>	2. Están limitados por el conjunto de caracteres que pueden utilizar, lo que puede ser un problema en sistemas que manejan datos binarios complejos.
+
 ### High-Level Data Link Control (HDLC)
 Uno de los protocolos más relevantes de la capa de enlace de datos es HDLC. No solo porque fue ampliamente utilizado, sino también porque estableció las bases para el resto de protocolos, en los que se usan los mismos formatos o similares, y los mismos procedimientos que los empleados en HDLC.
 Para satisfacer las demandas de diversas aplicaciones, HDLC define tres tipos de estaciones, dos configuraciones del enlace y tres modos de operación para la transferencia de los datos.
